service.yml
apiVersion: v1
kind: Service
metadata:
  name: reddit-deployment-service
spec:
  selector:
    app: reddit
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 32000
      protocol: TCP
