Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-reddit-clone

spec:
  rules: 
    - host: "domain.com"
      http:
        paths:
          - pathType: Prefix
            path: "/test"
            backend:
              service:
                name: reddit-deployment-service
                port:
                  number: 32000
    - host: "*.domain.com"
      http:
        paths:
          - pathType: Prefix
            path: "/test"
            backend:
              service:
                name: reddit-deployment-service
                port:
                  number: 32000
